# SnakeGame

./: .gitignore  README.md  SnakeBotDifficulties.txt
Snake/: CMakeLists.txt  snakeclient.cpp  snakeclient.h  snakeclient.ui
SnakeBot/: CMakeLists.txt  enter.cpp  enter.h  enter.ui  main.cpp  snake.h  snakebot.cpp  snakebot.h  snakebot.ui  snakeclient.cpp  snakeclient.h  snakeclient.ui
SnakeClient/: CMakeLists.txt  enter.cpp  enter.h  enter.ui  main.cpp  snakeclient.cpp  snakeclient.h  snakeclient.ui
SnakeGame-Interface_Improvements/: snakeclient.cpp  snakeclient.h  snakeclient.ui
SnakeGame-Interface_Improvements/SnakeClient/: CMakeLists.txt  snakeclient.cpp  snakeclient.h  snakeclient.ui
SnakeServer/: CMakeLists.txt  Server.h  main.cpp  server.cpp  server.h  snake.cpp  snake.h  snakeserver.cpp  snakeserver.h  snakeserver.ui
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/: .ninja_deps  .ninja_log
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: QFrame.1CAECB9D0CB8522C.idx  QHBoxLayout.248BC5136636CA2F.idx  QLabel.BEB44943BFA77EB8.idx  QMenuBar.26FA9C9F5E9EEA96.idx  QSpacerItem.F14B858776607E51.idx  QStatusBar.77EFB541513602E9.idx  QVariant.F954470A6A460228.idx  (+3 more)
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/SnakeBot.app/Contents/MacOS/: SnakeBot
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/SnakeBot_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/SnakeBot_autogen/EWIEGA46WW/: moc_snakebot.cpp  moc_snakebot.cpp.d
build-SnakeBot-Qt_6_5_0_for_macOS-Debug/SnakeBot_autogen/include/: ui_snakebot.h
(+16 files in other folders)
